--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,4 +1,8 @@
 @charset "utf-8";
+/*Fonte Titulo*/
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+/*Fonte Paragrafo*/
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 *{
     margin: 0px;
@@ -29,10 +33,14 @@ header {
 header h1{
     font-variant: small-caps;
     padding-top: 50px;
+    font-family: 'Passion One';
+    font-size: 2.6em;
+    font-weight: lighter;
 }
 
 header p {
     padding-bottom: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 section{
@@ -40,6 +48,7 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: 'Sriracha';
 }
 
 .normal{
