--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,9 +4,15 @@
 /*Fonte Paragrafo*/
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+:root{
+    --font01:'Passion One';
+    --font02:'Sriracha';
+    --font03:'Verdana, Geneva, Tahoma, sans-serif';
+}
+
 *{
     margin: 0px;
-    padding: 0px;
+    padding: 0px; 
 }
 
 body{
@@ -33,14 +39,14 @@ header {
 header h1{
     font-variant: small-caps;
     padding-top: 50px;
-    font-family: 'Passion One';
-    font-size: 2.6em;
+    font-family: var(--font01);
+    font-size: 5.5vw;
     font-weight: lighter;
 }
 
 header p {
     padding-bottom: 50px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: var(--font03);
 }
 
 section{
@@ -48,7 +54,8 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
-    font-family: 'Sriracha';
+    font-family:var(--font02);
+    font-size: 3vw;
 }
 
 .normal{
@@ -61,9 +68,10 @@ section{
 }
 
 .imagem p{
-    background-color: rgba(0, 0, 0, 0.244);
+    background-color: rgba(0, 0, 0, 0.566);
     color: white;
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
 }
 
 footer{
