--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,6 +58,10 @@ section{
     font-size: 3vw;
 }
 
+section p{
+    padding-bottom: 2em;
+}
+
 .normal{
     background-color: white;
     color: black;
@@ -65,13 +69,28 @@ section{
 
 .imagem{
     background-color:rgb(118, 117, 117);
+    background-size: cover;
+    box-shadow: inset 2px 2px 8px 0 rgba(0, 0, 0, 0.573);
+    background-attachment: fixed;
 }
 
 .imagem p{
-    background-color: rgba(0, 0, 0, 0.566);
+    background-color: rgba(0, 0, 0, 0.534);
     color: white;
     display: inline-block;
     padding: 10px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.512);
+}
+
+#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 
 footer{
