--- a/estilo/style.css
+++ b/estilo/style.css
@@ -72,6 +72,7 @@ section p{
     background-size: cover;
     box-shadow: inset 2px 2px 8px 0 rgba(0, 0, 0, 0.573);
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 .imagem p{
